Setup Wordle and Lib modules

--- a/nixkell.toml
+++ b/nixkell.toml
@@ -18,6 +18,7 @@ tools = [
   "nixpkgs-fmt",
   "ormolu",
   "treefmt",
+  "ghcid"
 ]
 
 # These files and directories will be excluded from the nix build.
